--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,13 +27,16 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
       - name: Install dependencies
         run: |
           pip install mkdocs mkdocs-material
+
+      - name: Configure GitHub Pages
+        uses: actions/configure-pages@v4
 
       - name: Build documentation
         run: |
@@ -49,4 +52,6 @@ jobs:
 
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
+        with:
+          enablement: true
